--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:layout_height="match_parent" />
 </androidx.appcompat.widget.LinearLayoutCompat>
