--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,123 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.details.DetailsFragment">
 
-    <TableRow>
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/codeTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="?attr/textAppearanceBody2" />
-    </TableRow>
+    <ImageView
+        android:src="@drawable/sample_image"
+        android:layout_width="match_parent"
+        android:scaleType="centerCrop"
+        android:layout_height="256dp" />
 
-    <TableRow android:paddingTop="16dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/nameTextView"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            tools:text="Veryveryveryveryveryvery long title"
-            android:textAppearance="?attr/textAppearanceHeadline5" />
-    </TableRow>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        tools:context=".presentation.details.DetailsFragment">
 
-    <TableRow android:paddingTop="16dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/materialTextView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/remains_label"
-            android:textAppearance="?attr/textAppearanceBody1" />
+        <TableRow>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/codeTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="?attr/textAppearanceBody2" />
+        </TableRow>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/remainsTextView"
-            tools:text="10.0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textAppearance="?attr/textAppearanceBody2" />
-    </TableRow>
+        <TableRow android:paddingTop="16dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/nameTextView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                tools:text="Veryveryveryveryveryvery long title"
+                android:textAppearance="?attr/textAppearanceHeadline5" />
+        </TableRow>
 
-    <TableRow android:paddingTop="8dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/materialTextView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/price_label"
-            android:textAppearance="?attr/textAppearanceBody1"/>
+        <TableRow android:paddingTop="16dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/materialTextView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/remains_label"
+                android:textAppearance="?attr/textAppearanceBody1" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/priceTextView"
-            tools:text="100,00 P"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textAppearance="?attr/textAppearanceBody2" />
-    </TableRow>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/remainsTextView"
+                tools:text="10.0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?attr/textAppearanceBody2" />
+        </TableRow>
 
-    <TableRow android:paddingTop="8dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/materialTextView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/rozn_price_label"
-            android:textAppearance="?attr/textAppearanceBody1" />
+        <TableRow android:paddingTop="8dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/materialTextView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/price_label"
+                android:textAppearance="?attr/textAppearanceBody1"/>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/roznPriceTextView"
-            tools:text="100.00 P"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textAppearance="?attr/textAppearanceBody2" />
-    </TableRow>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/priceTextView"
+                tools:text="100,00 P"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?attr/textAppearanceBody2" />
+        </TableRow>
 
-    <TableRow android:paddingTop="8dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/alcTypeField"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/alc_type_label"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:visibility="invisible" />
+        <TableRow android:paddingTop="8dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/materialTextView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rozn_price_label"
+                android:textAppearance="?attr/textAppearanceBody1" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/alcTypeTextView"
-            tools:text="100"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:visibility="invisible" />
-    </TableRow>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/roznPriceTextView"
+                tools:text="100.00 P"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?attr/textAppearanceBody2" />
+        </TableRow>
 
-    <TableRow android:paddingTop="8dp">
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/alcValueField"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/alc_value_label"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:visibility="invisible" />
+        <TableRow android:paddingTop="8dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/alcTypeField"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/alc_type_label"
+                android:textAppearance="?attr/textAppearanceBody1"
+                android:visibility="invisible" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/alcValueTextView"
-            tools:text="10%"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:visibility="invisible" />
-    </TableRow>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/alcTypeTextView"
+                tools:text="100"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:visibility="invisible" />
+        </TableRow>
 
-</TableLayout>
+        <TableRow android:paddingTop="8dp">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/alcValueField"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/alc_value_label"
+                android:textAppearance="?attr/textAppearanceBody1"
+                android:visibility="invisible" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/alcValueTextView"
+                tools:text="10%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:visibility="invisible" />
+        </TableRow>
+
+    </TableLayout>
+
+</LinearLayout>
