--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeRecycleView"
+        android:padding="16dp"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
