--- a/app/src/main/res/layout/item_home_product.xml
+++ b/app/src/main/res/layout/item_home_product.xml
@@ -6,42 +6,55 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:padding="16dp">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/nameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="256dp"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:layout_gravity="top|start" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:src="@drawable/sample_image"
+            android:scaleType="centerCrop"
+            android:layout_height="150dp" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/priceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="?android:attr/textColorSecondary" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:padding="16dp">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/codeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="?android:attr/textColorSecondary"
-            android:layout_gravity="bottom|start" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="256dp"
+                android:textAppearance="?attr/textAppearanceBody1"
+                android:layout_gravity="top|start" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/remainTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:textAppearance="?attr/textAppearanceHeadline6" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/priceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textColor="?android:attr/textColorSecondary" />
 
-    </FrameLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/codeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textColor="?android:attr/textColorSecondary"
+                android:layout_gravity="bottom|start" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/remainTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|end"
+                android:textAppearance="?attr/textAppearanceHeadline6" />
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
