--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/HomeFragment"
         android:name="ru.captaindmitro.warehouseapp.presentation.home.HomeFragment"
-        android:label="@string/home_fragment_label"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
 
         <action
@@ -20,7 +20,7 @@
     <fragment
         android:id="@+id/DetailsFragment"
         android:name="ru.captaindmitro.warehouseapp.presentation.details.DetailsFragment"
-        android:label="@string/details_fragment_label"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_details">
 
         <action
